2005-07-12  Bastien Nocera  <hadess@hadess.net>

	* src/totem-disc.c: (cd_cache_new): patch from James Livingston
	<jrl@ids.org.au> to avoid a double-free (Closes: #310114)

2005-07-12  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c:
	(bacon_video_widget_get_current_frame): work around
	XINE_STREAM_INFO_VIDEO_RATIO breakage for MPEG streams
	(Closes: #301020)

2005-07-04  Bastien Nocera  <hadess@hadess.net>

	* data/properties.glade: Make the album name selectable

============ Version 1.0.4

2005-06-22  Bastien Nocera  <hadess@hadess.net>

	* configure.in: 1.0.4

2005-06-18  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd

2005-06-18  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (bacon_video_widget_idle_signal):
	missing break statement that could cause a crash with some files

2005-06-17  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (show_controls): Don't allow for show_controls to be
	called if there's no video widget, fixes a crash when 'h' is pressed
	before the video widget is initialised (Closes: #308069)

2005-06-17  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: Make sure that the window isn't shown on startup,
	otherwise it might resize before being used (patch from Trent Lloyd
	<lathiat@bur.st>) (Closes: #308070)

2005-06-13  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-message-connection.c: (server_cb): updated from HEAD

2005-06-13  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (bacon_video_widget_finalize),
	(xine_event), (bacon_video_widget_set_show_cursor):
	Don't reset the cursor to the default pointer when showing it, but
	to whatever the current pointer should have been (Closes: #163808)

2005-06-07  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: add video/3gpp and audio/3gpp mime-types
	as supported

2005-06-06  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: